--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta property="twitter:description" content="Rocket Meals - Die mobile App für Studierendenwerke und Mensen. Digitaler Speiseplan, Vorbestellfunktion und Nährwertinformationen in einer App.">
     <meta property="twitter:image" content="/assets/images/logo.png">
 
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="1aaaafb2-1ba3-470b-80dd-d7cc641f15c3" data-blockingmode="auto" type="text/javascript"></script>
+    
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
     <link rel="icon" type="image/png" href="/assets/images/favicon.png">
