Refactor Cookiebot integration into shared script

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -21,7 +21,7 @@
     <meta property="twitter:description" content="Alles über Datenschutz, Hosting und Kontaktformular auf der Rocket Meals Website.">
     <meta property="twitter:image" content="/assets/images/logo.png">
 
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="1aaaafb2-1ba3-470b-80dd-d7cc641f15c3" data-blockingmode="auto" type="text/javascript"></script>
+    <script src="assets/js/cookiebot.js"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
