--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                         <iframe
                           id="contact-form-iframe"
                           width="100%"
+                          height = "1000"
+                          src="https://docs.google.com/forms/d/1s8HnwOeR1ETfNYpWuu7nUYTSBWGprTF97wz-Fd9d_4Y/viewform?embedded=true"
                           frameborder="0"
                           style="border:none;">
                         </iframe>
