--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <a href="#contact" class="nav-link" role="menuitem" aria-label="Kontakt aufnehmen">Kontakt</a>
                         </li>
                         <li class="nav-item" role="none">
-                            <a href="datenschutz.html" class="nav-link" role="menuitem">Datenschutz</a>
+                            <a href="privacy-policy.html" class="nav-link" role="menuitem">Datenschutz</a>
                         </li>
                     </ul>
                     <div class="nav-toggle" id="mobile-menu" role="button" aria-label="Navigationsmenü öffnen" aria-expanded="false" aria-controls="nav-menu" tabindex="0">
@@ -460,7 +460,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Rocket Meals. Alle Rechte vorbehalten. | <a href="datenschutz.html" style="color: #bdc3c7;">Datenschutz</a> | <a href="#" style="color: #bdc3c7;">Impressum</a></p>
+                <p>&copy; 2024 Rocket Meals. Alle Rechte vorbehalten. | <a href="privacy-policy.html" style="color: #bdc3c7;">Datenschutz</a> | <a href="#" style="color: #bdc3c7;">Impressum</a></p>
             </div>
         </div>
     </footer>
